[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
license = { text = "MIT" }
name = "pyess"
version = "0.1.23"
authors = [
  { name="gluap", email="pypi@pgoergen.de" },
]
description = "A small example package"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
          'Development Status :: 3 - Alpha',
          'License :: OSI Approved :: MIT License',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          "Operating System :: OS Independent",
]
dependencies = [
          'zeroconf', 'requests', 'graphyte', 'aiohttp', 'aiomqtt >=0.4.0, <2', 'ConfigArgParse'
]
[project.urls]
Homepage = "https://github.com/gluap/pyess"
Issues = "https://github.com/gluap/pyess/issues"

[project.optional-dependencies]
test = [
          'tox', 'pytest'
]


[project.scripts]
esscli='pyess.cli:main'
essmqtt='pyess.essmqtt:main'